# Lab12

./: CMakeLists.txt  main.cpp
.github/workflows/: release.yml
Include/: Map.hpp  Reduce.hpp  Spliter.hpp
